--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,11 @@ body {
     line-height: 1.4;
 }
 
+.container {
+  width: 800px;
+  margin: auto;
+}
+
 /*
  * Remove text-shadow in selection highlight: h5bp.com/i
  * These selection declarations have to be separate.
@@ -93,6 +98,181 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+.cards {
+  margin: 4em 5em;
+}
+
+.unfocused {
+  top: 5em !important;
+  opacity: 0.3 !important;
+}
+
+.card {
+   -webkit-transition: all 0.5s ease;
+   -moz-transition: all 0.5s ease;
+   -o-transition: all 0.5s ease;
+   transition: all 0.5s ease;
+}
+
+.card.code {
+  top: 10px;
+  -webkit-transform:rotate(-20deg);
+  -moz-transform:rotate(-20deg);
+  -o-transform:rotate(-20deg);
+  -ms-transform:rotate(-20deg);
+  z-index: 1010;
+  left: 60px;
+}
+
+.card.cv{
+  z-index: 1009;
+  left: 20px;
+}
+
+
+.card.blog{
+  top: 35px;
+  left: -20px;
+  z-index: 1008;
+  -webkit-transform:rotate(20deg);
+  -moz-transform:rotate(20deg);
+  -o-transform:rotate(20deg);
+  -ms-transform:rotate(20deg);
+}
+
+a span {
+  position:absolute; 
+  width:100%;
+  height:100%;
+  top:0;
+  left: 0;
+
+  /* edit: added z-index */
+  z-index: 10000;
+
+  /* edit: fixes overlap error in IE7/8, 
+     make sure you have an empty gif */
+  background-image: url('empty.gif');
+}
+
+h1 {
+  font-family: 'Petit Formal Script', cursive;
+  text-align: center;
+  margin: 2em;
+}
+
+.card {
+    float: left;
+    position: relative;
+    font-family: 'Petit Formal Script', cursive;
+
+    /* ratio; 1.39 */
+    width: 196px;
+    height: 285px;
+    border: solid 1px midnightblue;
+    text-shadow: 2px 2px 6px #888;
+    box-shadow: 5px 5px 15px #222;
+    border-radius: 0.3em;
+    background: white;
+}
+
+.inner_card {
+    position: absolute;
+    border: solid 3px midnightblue;
+
+    top: 5px;
+    left: 5px;
+    right: 5px;
+    bottom: 5px;
+
+    height: 270px;
+}
+
+.inner_card {
+    background-color:white;
+    background-size: 30px 30px, 90px 90px;
+    background-position: 0 0;
+
+    background-image:
+    radial-gradient(midnightblue 9px, transparent 10px),
+    repeating-radial-gradient(midnightblue 0, midnightblue 4px, transparent 5px, transparent 20px, midnightblue 21px, midnightblue 25px, transparent 26px, transparent 50px);
+
+    background-image:
+    -webkit-radial-gradient(midnightblue 9px, transparent 10px),
+    -webkit-repeating-radial-gradient(midnightblue 0, midnightblue 4px, transparent 5px, transparent 20px, midnightblue 21px, midnightblue 25px, transparent 26px, transparent 50px);
+
+    background-image: -moz-radial-gradient(midnightblue 9px, transparent 10px), -moz-repeating-radial-gradient(midnightblue 0pt, midnightblue 4px, transparent 5px, transparent 20px, midnightblue 21px, midnightblue 25px, transparent 26px, transparent 50px)
+}
+
+.card h2 {
+    text-align: center;
+    font-size: 18pt;
+    background: white;
+    border-radius: 100%;
+    margin: 90px auto;
+    padding: 1em 0;
+    width: 4em;
+    line-height: 150%;
+    border: solid 2px midnightblue;
+    color: black;
+    background: white;
+}
+
+/*
+.card:hover .inner_card {
+    background: midnightblue;
+}
+*/
+
+.card .leading:before {
+  position: absolute;
+  left: 2mm;
+  top: 2mm;
+
+}
+
+.card .lagging:after {
+  -webkit-transform:rotate(180deg);
+  -moz-transform:rotate(180deg);
+  -o-transform:rotate(180deg);
+  -ms-transform:rotate(180deg);
+  position: absolute;
+  right: 2mm;
+  bottom: 2mm;
+}
+
+.heart.leading:before, .heart.lagging:after {
+  color: red;
+  padding: 0.5em;
+  border-radius: 45%;
+  text-shadow: none;
+  background: white;
+  content: "\2665";
+  border: solid 2px midnightblue;
+  z-index: 1000;
+}
+
+.diamond.leading:before, .diamond.lagging:after {
+  color: red;
+  padding: 0.5em;
+  border-radius: 45%;
+  text-shadow: none;
+  background: white;
+  content: "\2666";
+  border: solid 2px midnightblue;
+  z-index: 1000;
+}
+
+.club.leading:before, .club.lagging:after {
+  color: black;
+  padding: 0.5em;
+  border-radius: 45%;
+  text-shadow: none;
+  background: white;
+  content: "\2663";
+  border: solid 2px midnightblue;
+  z-index: 1000;
+}
 
 
 
