adds a background colour change to .card:hover

--- a/css/main.css
+++ b/css/main.css
@@ -154,6 +154,10 @@ textarea {
     -ms-transform:rotate(20deg);
 }
 
+.card:hover {
+  background: lightblue;
+}
+
 .unfocused {
     top: 60px;
     opacity: 0.3 !important;
